--- a/Места/Зэкерис.md
+++ b/Места/Зэкерис.md
@@ -2,93 +2,211 @@
 tags:
   - доделать
 ---
-Главный из двух континентов альтернативной Земли. Вся история человечества начинается именно здесь.
+Зэкерис — главный из двух континентов альтернативной Земли. Вся история человечества начинается именно здесь.
 
 # Города
-На протяжении всей основной истории, на Зэкерисе не было государств как таковых. Однако были полу-самостоятельные города. Большую часть времени все города Зэкериса управлялись центральной властью в столице — [Эренберге](Эренберг). Управление осуществлялось через глав городов — у каждого города был управляющий (глава), который подчинялся напрямую Правителю Зэкериса.
-Во время эпохи изоляции (подробнее ниже) города были разделены и отрезаны друг от друга, из-за чего прежний порядок был развален. Бывшие главы городов установили собственные порядки и формы правления.
 
-Каждый город имеет свою главную специализацию и идеологию, которая часто была связана со специализацией.
-Специализация значит, что город в основном занимается одним родом деятельности — добывает пищу, создаёт искусство, мастерит мебель, развивает науку и так далее. Конечно, в каждом городе были люди разных профессий, но профиль всегда смещался на конкретный род занятий.
-Идеология это не вера и не религия. Это образ жизни и мнение о том, как лично вам лучше живётся. Как правило, идеологии не навязываются, но всё же у каждого города есть преобладающая идеология — связано это с низкой широтой выбора идеологии в детстве жителей каждого города. Часто, именно идеология и поддерживает специальность города.
+На протяжении всей основной истории на Зэкерисе не существовало государств в привычном смысле. Вместо них были полуавтономные города. Долгое время они подчинялись центральной власти, находящейся в столице — Эренберге.
 
-Вокруг многих городов есть деревни — часто нейтральные по идеологии и специальности поселения. Жители деревень имеют наибольший выбор идеологий, но часто по этой же причине могут разъезжаться по разным городам, когда для этого есть возможности. Во время эпохи изоляции многие деревни стали активно производить еду, чтобы прокормить себя и, в последствии, голодающие города, которые больше не смогли полагаться на объединённое устройство мира.
+Управление осуществлялось через назначенных **глав городов**. Каждый глава подчинялся напрямую **Правителю Зэкериса**.  
+Однако с наступлением **эпохи изоляции** связь между городами прервалась. Бывшие главы стали фактическими правителями своих территорий, устанавливая собственные порядки и формы правления.
 
-Вокруг почти каждого города есть кладбищенское кольцо. О них будет расписано подробнее ниже.
+Каждый город имеет:
+- **специализацию** — основное направление деятельности (например, сельское хозяйство, искусство, шахтёрство, наука);
+- **идеологию** — образ жизни и личное отношение к миру, к людям, к труду.
+
+> **Важно:**  
+> Идеология — это не вера и не религия. Это способ мышления и жизни, который человеку просто **удобен и близок**.  
+> В городах идеологии не навязываются, но у каждого обычно есть преобладающая, потому что у горожан небольшой много выбора — они живут в рамках того, что уже принято многими.
+
+Хотя в городах есть люди разных профессий, специализация задаёт основной уклон.  
+А идеология помогает этот уклон удерживать — особенно в условиях изоляции и ограниченного контакта с другими взглядами.
+
+Также почти каждый город окружён **кольцом мёртвых** — плотным кругом из тел, лежащих под открытым небом. О их роли будет написано ниже.
+
+## Деревни
+
+Вокруг многих городов расположены **деревни** — небольшие поселения, которые редко следуют городским идеологиям или специализациям. Подчиняться они могут внутренней властью (например, старейшинами), или напрямую прилежащему городу. Деревни:
+- чаще всего **нейтральны** — у них нет ярко выраженной идеологии;
+- **гибкие** — жители не связаны одной ролью или специализацией;
+- **разнообразны по укладу** — тут можно встретить всё вперемешку: плотников, травников, кочевников, торговцев, фермеров и так далее.
+
+Деревни давали людям **больше свободы выбора**. Дети, выросшие там, могли сами решить, в каком укладе им ближе жить — и часто переезжали в подходящий город, как только появлялась возможность.
+
+С наступлением **эпохи изоляции** деревни резко изменили курс. Оказавшись отрезанными от внешнего мира, они начали **массово заниматься сельским хозяйством**, чтобы обеспечить себя и помогать прилежащим голодающим городам.  
+Это сделало деревни ключевым звеном в выживании Зэкериса, хоть и ограничило их прежнюю свободу в выборе функций.
 
 # Экс-пи
-Основное и самое главное отличие Зэкериса от нашей вселенной. В мире Зэкериса существует фундаментальная квантовая частица экс-пи.
-Экс-пи может иметь любые свойства. Совершенно любые. Даже очень сложные, например движение с траекторией, напоминающую машину, с поглощением окружающей температуры. При этом в норме одна частица экс-пи всегда сохраняет свои свойства неизменными — она не может случайно их изменить, если такая способность не является частью её же свойств.
-В природе существуют *чистые* частицы экс-пи, которые не обладают свойствами, но они сразу их обретают, когда получают импульс. При обретении свойств, частица получит совершенно случайные свойства, предсказать или повлиять на будущие свойства невозможно (если в нашем распоряжении нет частиц экс-пи с таким свойством — влиять на другие частицы экс-пи).
-Часто чистое экс-пи удерживается в чистом состоянии за счёт других частиц экс-пи со свойствами.
 
-Беспорядочное множество малозаметных экс-пи с незначительными свойствами наполняет всю вселенную, в том числе и Зэкерис. Такое безвредное экс-пи называется *природным*.
+**Экс-пи** — фундаментальная частица, отличающая мир Зэкериса от всего остального. Это основа всех необъяснимых явлений на континенте.
 
-Живые существа Зэкериса с нервной системой имеют в этой системе *нервное экс-пи*, которое служит для улучшения обработки разной информации, а также для получения и управления способностями. Нервное экс-пи передаётся от матери к ребёнку. В редких случаях эта передача не происходит, тогда ребёнок рождается **зэктосом** — человеком без нервного экс-пи.
+## Что такое экс-пи?
 
-По всему Зэкерису распределены **хранилища чистого экс-пи** — это камни, породы, кристаллы и прочие минералы, в которых заключены **[[Ядро|ядра экс-пи]]**. Вкратце про ядра:
-- В них заключено немного чистого экс-пи
-- Их, как правило, нельзя обнаружить или заметить
-- Если *активировать* ядро, **не-зэктос** может получить способности и стать **[[Кристалосы|кристалосом]]**.
-- Также, если активация происходит без участия не-зэктос, экс-пи может наделить любой объект особыми свойствами — такой объект станет **артефактом**.
-- Для *активации* ядра нужно выполнить неизвестные заранее условия — поместить хранилище в определённые условия, что-то с ним сделать, выполнить какой-то порядок действия.
-- Условия зависят от конкретного хранилища, но узнать их заранее невозможно и они могут быть совершенно любыми.
-- Если разрушить или иначе повредить структуру ядра, чистое экс-пи будет *освобождено* (если это не условие для активации)
-- Освобождённое экс-пи **не дарует** способностей и может создать *аномалии*.
+Экс-пи — это квантовая частица, способная обладать абсолютно любыми свойствами. Вплоть до сложных и странных: например, двигаться по траектории, напоминающей машину, и одновременно поглощать тепло.
 
-Кристалосы — это счастливчики, которые случайно получили способности, активировав ядро (это почти никогда не происходит умышлено). Способности привязываются к нервному экс-пи кристалоса, поэтому он может их контролировать. По этой же причине **зэктос не может стать кристалосом**, но может стать живым артефактом (обычно это очень трагичные истории).
-Вкратце про кристалосов:
-- Их способности — это сложные алгоритмы из экс-пи, которые создают сложные манипуляции с окружающим миром или с самим кристалосом
-- Технически кристалос может иметь любые способности **кроме дара предвидения** — логика Зэкериса исключает возможность такой способности.
-- Сила и мощность способностей **неизменны** — кристалос может стать сильнее только за счёт **опыта использования** силы и за счёт более **глубокого понимания** того, как именно его сила работает (что изначально никогда не известно и почти всегда остаётся загадкой)
-- После смерти кристалоса, его способности продолжают существовать и действовать бесконтрольно — такие явления называются **призраками**.
+Если у экс-пи уже есть свойства, они **не могут измениться**, если только эта возможность не зашита в саму суть её свойств.
 
-Аномалии — это скопления заметного экс-пи, которые создают какое-то явление. Например, на Зэкерисе есть летающий остров — это результат работы аномалии, которая создаёт мощные ветра под островом, достаточно сильные для его удержания в воздухе. Чаще всего аномалии возникают из-за освобождения чистого экс-пи из ядер.
+В природе также существуют **чистые** частицы экс-пи — они не обладают никакими свойствами, пока не получат импульс. Как только импульс есть — появляются случайные свойств. Предсказать или повлиять на получаемые частицей свойства невозможно. Единственный способ повлиять — использовать уже активное экс-пи с соответствующими свойствами.  
+Чистое экс-пи может удерживаться в этом состоянии также с помощью других частиц экс-пи с подходящими для этого свойствами.
 
-Призраки — это аномалии, оставленные после смерти кристалоса. Часто призрак привязан к телу кристалоса, чьей способностью призрак был. После полного разложения, призрак может быть привязан к точке в пространстве, которая имеет инерцию и подвержена воздействию гравитации. В сумме это значит, что призрак останется на месте разложения, но могут быть исключения.
+## Природное экс-пи
 
-**Зэкериссцы ничего не знают про экс-пи или хранилища**
-Они воспринимают получение силы как необъяснимое случайное событие, как и аномалии. Однако все точно знают, что после смерти кристалоса останется призрак.
+Всё пространство в мире заполнено **природным экс-пи** — множеством частиц с ничтожными или незаметными свойствами. Это бесполезный, но безопасный фон, который не вызывает никаких эффектов. Несмотря на это, способности некоторых кристалосов используют природное экс-пи для реализации своих эффектов.
 
-# Кладбища
-Вокруг почти каждого города есть кольцо кладбища. Зэкериссцы не закапывают тела, поэтому кладбища представляют собой поля и горы тел, оставленных просто под открытым небом. Обычно, кладбища достаточно далеко от своих городов, чтобы не мешать жителям. Как правило, кладбище находятся за деревнями, которые выстроены вокруг города.
+## Нервное экс-пи
 
-В виду того, что на кладбищах много умерших кристалосов, на них скапливается множество опасных для жизни призраков. Со временем их стало так много, что кладбища стали непроходимы — города оказались в ловушке собственной жизнедеятельности. Это положило начало **эпохе изоляции**. В эту эпоху культурные особенности городов обострились и стали намного ярче выражены.
+Любое существо с нервной системой на Зэкерисе имеет в ней **нервное экс-пи**.  
+Оно нужно, чтобы:
 
-Несмотря на практически полную изоляцию внутри своего города, некоторые люди могли пробраться через кладбища, но в разгаре эпохи изоляции на это были способны единицы. Под конец эпохи многие города нашли способ расчистить некоторые дороги, благодаря чему связь между городами постепенно восстановилась. Основные профессии, которые стимулировали восстановление связи:
-- Теилтские шпионы
-- Лонджентские торговцы
-- Труповозы/перевозчики
+- более эффективно обрабатывать информацию;
+- управлять способностями (если они есть);
+- воспринимать реальность "по-зэкерисски".
 
-Труповозы — важная часть общества, так как именно они занимаются быстрой перевозкой мёртвых тел из городов и деревень на кладбища. Когда кристалос умирает, есть всего несколько часов, прежде чем его способности начнут действовать самостоятельно — за это время нужно добраться до кладбища как можно быстрее. Однако, лишь в редких случаях это удавалось идеально — часто способности выходили из-под контроля уже в повозке. По этой причине на кладбищах также можно найти разбитые труповозки, а иногда даже мёртвых лошадей.
-Многие труповозы могут также быть и перевозчиками, так как они лучше всего знают, в каких местах призраки *не такие опасные*. Не всегда труповозов и перевозчиков разделяют — почти каждый перевозчик был или остаётся труповозом.
+Нервное экс-пи **наследуется от матери**. Изредка оно не передаётся — тогда рождается **зэктос**: человек без нервного экс-пи. Он не сможет получить способности и не обладает особенностями зэкерисского мышления.
+
+## Хранилища и ядра
+
+По всему Зэкерису распределены **хранилища чистого экс-пи**: минералы, кристаллы, породы, в которых содержатся **ядра экс-пи**.
+### Кратко о ядрах:
+
+- В ядре есть **чистое** экс-пи. Их количество может быть разным. 
+- Ядро обычно невидимо и не поддаётся обнаружению.
+- Выполнив **условия**, его можно **активировать**. Если сделать это, то:
+    - человек или животное (если не зэктос) может стать **кристалосом**;
+    - если человека или животного рядом нет, любой предмет или зэктос поблизости (даже небольшой участок грунта), может стать **артефактом**.
+- Условия активации **неизвестны заранее** и абсолютно уникальны. Это может быть всё, что угодно — от "оставить в огне на сутки" до "дотронуться во время весеннего дождя".
+- Разрушение хранилища с ядром (если это не часть условий) приводит к **освобождению** чистого экс-пи.
+    - Такое экс-пи не создаёт артефактов и не наделяет способностями.
+    - Вместо этого, оно создаёт **аномалии**.
+
+## Кристалосы и артефакты
+
+**Кристалос** — человек, который активировал ядро и, в последствии, обрёл способности. Почти всегда это происходит без намерения.
+
+Особенности:
+- Способность — это сложный алгоритм работы частиц экс-пи, которые взаимодействуют с миром, сущностями и самой реальностью.
+- Возможны любые способности, кроме **предвидения** — логика Зэкериса его исключает.
+- Сила одного кристалоса не меняется, но контроль над ней растёт с **опытом** и **пониманием механики** самой способности. Именно опыт и познание себя делает кристалоса сильнее.
+- После смерти кристалоса его сила продолжает существовать — в форме **люста**.
+
+**Артефакт** — это предмет с особыми свойствами, которые часто можно контролировать и использовать в своих целях. Как и со способностями кристалосов, свойства артефакта могут быть любыми и вызываться по-разному. Человека, который владеет артефактом и пользуется им, называют **дримосом** или **сменным кристалосом**.
+
+Зэктос не может стать кристалосом или использовать артефакты, но может быть превращён в **живой артефакт**, что для него редко проходит без катастрофических последствий.
+
+>Иногда человек может не знать, что он стал кристалосом.
+
+## Аномалии и люсты
+
+**Аномалия** — это результат действия активного или освобождённого экс-пи.  
+Примеры:
+- Летающий остров, поддерживаемый ветрами, которые генерирует аномалия под ним;
+- Искажающая восприятие времени область пространства;
+- Замёрзшее озеро, в котором вода горит.
+
+**Люст** — это аномалия, оставшаяся после смерти кристалоса. Обычно он привязан к телу умершего. Позже — с конкретным местом, где тело разложилось. Но в редких случаях может переместиться, если способности при жизни кристалоса это допускают.
+
+Суть люста — бесконтрольная способность, которой кристалос обладал при жизни. Если кристалос вызывал дождь, то над люстом он будет идти постоянно. Если кристалос мог возгораться, то люст будет в виде вечно полыхающего огня.
+
+Прежде чем сила умершего выйдет из-под контроля, пройдёт от тридцати минут до двух часов, пока тело не начнёт процесс разложения.
+
+## Восприятие экс-пи зэкериссцами
+
+Зэкериссцы **не знают** про экс-пи, ядра или всю связанную с этим физику.  
+Они называют все подобные явления **кристалом** (ударение на "и"), что дословно переводится как: _«то, чему нет объяснения»_.
+
+Кристал — это:
+- Полученная "из ниоткуда" сила.
+- Странные явления в природе, аномалии. 
+- Люсты, артефакты.
+
+Но зэкериссцы знают, что **после смерти кристалоса остаётся люст**, и что не всегда кристалос знает о существовании своих способностей. По этой причине, зэкериссцы как можно быстрее избавляются от мертвецов. 
+
+# Хэкты
+
+Вокруг почти каждого города Зэкериса лежит **кольцо из трупов** — **хэкт**.  
+Зэкериссцы **не закапывают тела**. Поэтому у них вместо кладбищ — огромные поля и холмы мёртвых тел под открытым небом.
+
+Хэкты обычно расположены **за деревнями**, которые окружают город и удалены достаточно далеко от поселений, чтобы не мешать их жителям. Размер хэкта зависит от возраста и размера его города.
+
+## Опасность хэктов
+
+На хэктах полно **мёртвых кристалосов**, а значит — **люстов**.  
+С годами их стало **слишком много**, и хэкты стали **непроходимыми**. Это заключило города буквально **в ловушку собственной смертности**.
+
+Так началась **Эпоха изоляции**.
+Особенности этой эпохи:
+- Города теряют связь друг с другом;
+- Разваливается объединённый уклад жизни на континенте;
+- Обостряются **культурные отличия**.
+
+## Прорывы через хэкты
+
+Даже в самый изолированный период **единицы всё же проходили** через хэкты.  
+Но только **в конце эпохи** началось массовое восстановление связей.
+
+Это стало возможным в основном благодаря трём профессиям:
+- **Теилтские шпионы** — многие из них были кристалосами, часть из них могли безопасно пересечь кладбища или даже перенести других.
+- **Лонджентские торговцы** — больше всех были заинтересованы в поиске "чистых" проходов для караванов.
+- **Труповозы / Перевозчики** — лучше всех знали маршруты и свойства местных аномалий.
+
+**Труповоз** — это важная профессия для каждого города. Их работа заключается в том, чтобы **забирать мёртвые тела** из городов и деревень и **увозить их** на хэкты **как можно быстрее**.
+
+По прошествии некоторого времени после смерти кристалоса от него остаётся **люст**. За это время труповоз обязан вывезти тело хотя бы за пределы поселения. Почти всегда **способности вырываются наружу** уже по пути. В худших ситуациях труповозам приходится бросать повозки с мертвецами на хэкте и возвращаться пешком. Из-за этого кроме мертвецов на хэктах встречаются разбитые повозки и мёртвые лошади.
+
+Многие труповозы также и **перевозчики**, которые:
+- Возят **людей, товары и посылки** между городами.
+- **Знают географию хэкта** своего города лучше кого-либо.
+- Знают, где **люсты менее опасны**.
+
+> Почти каждый перевозчик **либо был**, либо **остаётся** труповозом.
 
 # Рандомное мышление
-Это ещё одно важное отличие Зэкериса — люди (и в целом существа с нервной системой) имеют рандомное мышление. Эту способность даёт *нервное экс-пи*, которое выступает в роли генератора случайных мыслей, который индивид может настроить для своих нужд. **Зэктосы не имеют рандомного мышления** — всё, что описано ниже, ни в коем случае не касается зэктосов.
 
-Рандомное мышление это способность создавать и понимать истинные случайности. Если попросить миллион зэкериссцев выбрать число от 1 до 1000, то в среднем **каждое число выберут равное количество зэкериссцев**. Если провести такой же эксперимент с нами, результат будет другой — **некоторые числа будут иметь преимущества и их будут выбирать чаще**. Связано это как раз с нашей неспособностью мыслить случайно.
+Одно из главных отличий **Зэкериса** — это **рандомное мышление** людей и существ с нервной системой. Эта способность даётся **нервным экс-пи**, которые функционируют как **генератор случайных мыслей**, позволяющий индивиду настраивать их под личные нужды.
 
-С рандомным мышлением человек не только может создать истинную случайность, но и понимать их. Если такой человек увидит случайную последовательность, он не будет искать в ней закономерность, а скажет сразу — здесь всё хаотично. Это меняет огромный кусок восприятия окружающего мира. Это, к примеру, отменяет религии — ведь теперь нет необходимости искать ответы на вопросы, ведь ответ очевиден — всё происходит случайно. Конечно, это не значит, что зэкериссцы в среднем умнее нас, однако они защищены от некоторых **когнитивных искажений**, и им сложнее поверить в чепуху, и тем более сами зэкериссцы обычно не склонны такую чепуху выдумывать.
+**Зэктосы не обладают рандомным мышлением**, всё, что будет описано ниже, к ним не относится.
 
-Также рандомное мышление исключает возможность увидеть причинно-следственную связь там, где её нет. Это значит, что зэкериссец не будет связывать событие А и событие Б, если между ними нет прямой и явной взаимосвязи. Это также исключает множество заблуждений, стереотипного мышления предвзятости.
+## Что такое рандомное мышление?
 
-Однако это иногда негативно влияет на решение сложных задач, решение которых кажется неочивидным. Столкнувшись с достаточно сложной задачей зэкерисец скорее начнём беспорядочно перебирать случайные варианты действий, чем попытается найти взаимосвязь между разными элементами задачи. Однако это целиком зависит от уровня образования.
+**Рандомное мышление** — способность:
+1. **Создавать** истинные случайности;
+2. **Понимать** случайности и хаос вокруг.
 
-Небольшое сравнение ответов на вопросы образованных и необразованных зэкериссцев и землян:
+Если провести эксперимент с миллионом испытуемых и попросить их выбрать число от 1 до 1000:
+- **Зэкериссцы** в среднем выберут каждое число равным количеством раз.
+- В отличие от них, зэктосы (а также **земляне**) будут склонны выбирать определённые числа чаще, что связано с неспособностью мыслить случайно.
 
-| Почему дует ветер? | **Землянин**                                                      | **Зэкерисец**                                                                                                  |
-| :----------------- | :---------------------------------------------------------------- | :------------------------------------------------------------------------------------------------------------- |
-| **Необразованный** | Это дует какой-то дух, ведь если я подую, то тоже появится ветер. | Просто так.                                                                                                    |
-| **Образованный**   | Ветер возникает из-за разницы температур воздуха.                 | По последним исследованиям, мы сделали осторожный вывод, что ветер возникает из-за разницы температур воздуха. |
+В общих чертах рандомное мышление позволяет принять случайное решение, вытащить случайное воспоминание, придумать уникальную идею и так далее.
+## Влияние на восприятие мира
 
-| Кто убил соседку, которая жила с жутким мужем? | **Землянин**                                          | **Зэкерисец**                 |
-| :--------------------------------------------- | :---------------------------------------------------- | :---------------------------- |
-| **Необразованный**                             | Муж!                                                  | Не знаю.                      |
-| **Образованный**                               | Нужно провести расследование и сперва допросить мужа. | Нужно провести расследование. |
+Зэкериссцы воспринимают случайность как **естественное явление**. Они не пытаются найти закономерности в случайных последовательностях, а сразу говорят, что **всё хаотично**. Это имеет несколько ключевых последствий:
+- **Отсутствие религий** — нет потребности искать ответы на вопросы, потому что всё происходит случайно;
+- **Защищённость от когнитивных искажений** — зэкериссцы не склонны верить в чепуху, и редко её выдумывают;
+- **Отсутствие ложных причинно-следственных связей** — зэкериссцы не связывают события, если нет явной зависимости. По этой же причине они **почти лишены стереотипов**.
 
-| Недавно в городе появился чужак и в начались кражи. Кто преступиник? | **Землянин**                                     | **Зэкерисец**                                                                               |
-| :------------------------------------------------------------------- | :----------------------------------------------- | :------------------------------------------------------------------------------------------ |
-| **Необразованный**                                                   | Чужак!                                           | Кто-угодно может им быть.                                                                   |
-| **Образованный**                                                     | Нужно допросить чужака и провести расследование. | Нужно допросить всех, свидетелей и жертв, чтобы найти больше улик и провести расследование. |
+Но рандомное мышление **это не супер-сила**. При столкновении с **сложными задачами** зэкериссцы склонны **беспорядочно перебирать случайные варианты**, вместо того чтобы искать причинно-следственные связи между элементами задачи. Часто зэкериссцы не видят смысла в познании чего-либо, так как ответ им кажется очевидным — всё происходит потому, что происходит. Однако всё это зависит от уровня образования.
 
-Понять рандомное мышление — самое сложное в мире Зэкериса. Зэкериссцы не делают многих вещей, которые делаем мы, именно из-за рандомного мышления, понимания случайностей и защиты от когнитивных искажений. Кроме того, самые фундаментальные моменты могут выходить за рамки нашего понимания, например то, как работают ассоциации. Вкратце, ассоциации зэкериссца бесполезны для анализа его психологии — зэкериссец будет вспоминать **случайные** факты, которые как либо связаны с объектом для ассоциации. 
+Примеры восприятия случайности и причинности:
+
+| ***Почему дует ветер?*** | **Землянин**                              | **Зэкерисец**                                                                                        |
+| ------------------------ | ----------------------------------------- | ---------------------------------------------------------------------------------------------------- |
+| **Необразованный**       | Это дух, который дует.                    | Просто так.                                                                                          |
+| **Образованный**         | Ветер возникает из-за разницы температур. | По последним исследованиям мы делаем осторожный вывод, что ветер возникает из-за разницы температур. |
+
+| ***Кто убил соседку, которая жила с жутким мужем?*** | **Землянин**          | **Зэкерисец**                 |
+| ---------------------------------------------------- | --------------------- | ----------------------------- |
+| **Необразованный**                                   | Муж!                  | Не знаю.                      |
+| **Образованный**                                     | Нужно допросить мужа. | Нужно провести расследование. |
+
+| ***Недавно появился чужак и начались кражи. Кто преступник?*** | **Землянин**            | **Зэкерисец**                            |
+| -------------------------------------------------------------- | ----------------------- | ---------------------------------------- |
+| **Необразованный**                                             | Чужак!                  | Может быть кто угодно.                   |
+| **Образованный**                                               | Нужно допросить чужака. | Нужно допросить всех, чтобы найти улики. |
+
+## Трудности психологии зэкериссцев
+
+Для нас понять рандомное мышление — самое сложное в мире Зэкериса. Зэкериссцы воспринимают мир через **случайность** и **хаос**, что изменяет их подход к жизни, решению задач и восприятию событий. Они не ищут причинно-следственных связей там, где их нет, и не склонны верить в вымышленные истины или логические ошибки. Это влияет на их восприятие мира, их поведение и даже на то, как они реагируют на различные ситуации.
+
+Это может быть сложно понять для нас, так как многие привычные моменты оказываются за рамками нашего восприятия, например то, как работают **ассоциации**.
+
+>Они будут вспоминать **случайные факты**, которые могут быть как-то связаны с объектом для ассоциации, но это не будет отголоском их внутреннего «Я» и не будет вызвано эмоциями. Поэтому ассоциации не дают чёткого понимания их психологии.
