--- a/Информация и особенности/Зэкерисский язык/Словарь.md
+++ b/Информация и особенности/Зэкерисский язык/Словарь.md
@@ -224,7 +224,7 @@ action obsidian://shell-commands/?vault=Zekeris&execute=65gagfb4h2
 | tezg      | 35-й разряд                                                  |                                                                                                       |                                                                                                                                                                                                             |
 | tefg      | 35-й разряд                                                  |                                                                                                       |                                                                                                                                                                                                             |
 | tevg      | 36-й разряд                                                  |                                                                                                       |                                                                                                                                                                                                             |
-| tetj      | 37-й разряд                                                  |                                                                                                       |                                                                                                                                                                                                             |
+| tet'j     | 37-й разряд                                                  |                                                                                                       |                                                                                                                                                                                                             |
 | tedj      | 38-ой разряд                                                 |                                                                                                       |                                                                                                                                                                                                             |
 | dast      | 39-ый разряд                                                 |                                                                                                       |                                                                                                                                                                                                             |
 | sof       | название                                                     | Общее название, как "стол", "дом", "человек"                                                          |                                                                                                                                                                                                             |
@@ -383,14 +383,16 @@ action obsidian://shell-commands/?vault=Zekeris&execute=65gagfb4h2
 | un        | учение                                                       |                                                                                                       |                                                                                                                                                                                                             |
 | ats       | идеология                                                    |                                                                                                       |                                                                                                                                                                                                             |
 | edz       | параметр                                                     |                                                                                                       |                                                                                                                                                                                                             |
-| kest                 | внимание                                                     |     |     |
-| son                  | направление "везде, вокруг"                                  |     |     |
-| kwir                 | реальность                                                   |     |     |
-| hag                  | бег                                                          |     |     |
-| wnim                 | вера                                                         |     |     |
-| ert                  | что-то настоящее                                             |     |     |
-| zman                 | управление                                                   |     |     |
-| pufr                 | погода                                                       |     |     |
+| kest      | внимание                                                     |                                                                                                       |                                                                                                                                                                                                             |
+| son       | направление "везде, вокруг"                                  |                                                                                                       |                                                                                                                                                                                                             |
+| kwir      | реальность                                                   |                                                                                                       |                                                                                                                                                                                                             |
+| hag       | бег                                                          |                                                                                                       |                                                                                                                                                                                                             |
+| wnim      | вера                                                         |                                                                                                       |                                                                                                                                                                                                             |
+| ert       | что-то настоящее                                             |                                                                                                       |                                                                                                                                                                                                             |
+| zman      | управление                                                   |                                                                                                       |                                                                                                                                                                                                             |
+| pufr      | погода                                                       |                                                                                                       |                                                                                                                                                                                                             |
+| Lust                 | призрак                                                      |     |     |
+| drim                 | артефакт                                                     |     |     |
 
 
 
@@ -628,7 +630,7 @@ action obsidian://shell-commands/?vault=Zekeris&execute=65gagfb4h2
 | tesge      | сводить к 34-ому разряду                                     |                                                                                 |                                                                                                  |
 | tezge      | сводить к 35-ому разряду                                     |                                                                                 |                                                                                                  |
 | tevge      | сводить к 36-ому разряду                                     |                                                                                 |                                                                                                  |
-| tetje      | сводить к 37-ому разряду                                     |                                                                                 |                                                                                                  |
+| tet'je     | сводить к 37-ому разряду                                     |                                                                                 |                                                                                                  |
 | tedje      | сводить к 38-ому разряду                                     |                                                                                 |                                                                                                  |
 | daste      | сводить к 39-ому разряду                                     |                                                                                 |                                                                                                  |
 | sofe       | называться, иметь название                                   |                                                                                 |                                                                                                  |
@@ -782,14 +784,16 @@ action obsidian://shell-commands/?vault=Zekeris&execute=65gagfb4h2
 | une        | учениеить (требуется ручной перевод)                         |                                                                                 |                                                                                                  |
 | atse       | идеологияить (требуется ручной перевод)                      |                                                                                 |                                                                                                  |
 | edze       | параметрить (требуется ручной перевод)                       |                                                                                 |                                                                                                  |
-| keste                | вниманиеить (требуется ручной перевод)                       |     |     |
-| sone                 | направление "везде, вокруг"ить (требуется ручной перевод)    |     |     |
-| kwire                | реальностьить (требуется ручной перевод)                     |     |     |
-| hage                 | бегить (требуется ручной перевод)                            |     |     |
-| wnime                | вераить (требуется ручной перевод)                           |     |     |
-| erte                 | что-то настоящееить (требуется ручной перевод)               |     |     |
-| zmane                | управлениеить (требуется ручной перевод)                     |     |     |
-| pufre                | погодаить (требуется ручной перевод)                         |     |     |
+| keste      | вниманиеить (требуется ручной перевод)                       |                                                                                 |                                                                                                  |
+| sone       | направление "везде, вокруг"ить (требуется ручной перевод)    |                                                                                 |                                                                                                  |
+| kwire      | реальностьить (требуется ручной перевод)                     |                                                                                 |                                                                                                  |
+| hage       | бегить (требуется ручной перевод)                            |                                                                                 |                                                                                                  |
+| wnime      | вераить (требуется ручной перевод)                           |                                                                                 |                                                                                                  |
+| erte       | что-то настоящееить (требуется ручной перевод)               |                                                                                 |                                                                                                  |
+| zmane      | управлениеить (требуется ручной перевод)                     |                                                                                 |                                                                                                  |
+| pufre      | погодаить (требуется ручной перевод)                         |                                                                                 |                                                                                                  |
+| Luste                | призракить (требуется ручной перевод)                        |     |     |
+| drime                | артефактить (требуется ручной перевод)                       |     |     |
 
 
 
@@ -1038,7 +1042,7 @@ action obsidian://shell-commands/?vault=Zekeris&execute=65gagfb4h2
 | tesga      | 34-й разрядный                                               |                                                           |            |
 | tezga      | 35-й разрядный                                               |                                                           |            |
 | tevga      | 36-й разрядный                                               |                                                           |            |
-| tetja      | 37-й разрядный                                               |                                                           |            |
+| tet'ja     | 37-й разрядный                                               |                                                           |            |
 | tedja      | 38-ой разрядный                                              |                                                           |            |
 | dasta      | 39-ый разрядный                                              |                                                           |            |
 | sofa       | названиеный (требуется ручной перевод)                       |                                                           |            |
@@ -1179,14 +1183,16 @@ action obsidian://shell-commands/?vault=Zekeris&execute=65gagfb4h2
 | una        | учениеный (требуется ручной перевод)                         |                                                           |            |
 | atsa       | идеологияный (требуется ручной перевод)                      |                                                           |            |
 | edza       | параметрный (требуется ручной перевод)                       |                                                           |            |
-| kesta                | вниманиеный (требуется ручной перевод)                       |     |     |
-| sona                 | направление "везде, вокруг"ный (требуется ручной перевод)    |     |     |
-| kwira                | реальностьный (требуется ручной перевод)                     |     |     |
-| haga                 | бегный (требуется ручной перевод)                            |     |     |
-| wnima                | вераный (требуется ручной перевод)                           |     |     |
-| erta                 | что-то настоящееный (требуется ручной перевод)               |     |     |
-| zmana                | управлениеный (требуется ручной перевод)                     |     |     |
-| pufra                | погоданый (требуется ручной перевод)                         |     |     |
+| kesta      | вниманиеный (требуется ручной перевод)                       |                                                           |            |
+| sona       | направление "везде, вокруг"ный (требуется ручной перевод)    |                                                           |            |
+| kwira      | реальностьный (требуется ручной перевод)                     |                                                           |            |
+| haga       | бегный (требуется ручной перевод)                            |                                                           |            |
+| wnima      | вераный (требуется ручной перевод)                           |                                                           |            |
+| erta       | что-то настоящееный (требуется ручной перевод)               |                                                           |            |
+| zmana      | управлениеный (требуется ручной перевод)                     |                                                           |            |
+| pufra      | погоданый (требуется ручной перевод)                         |                                                           |            |
+| Lusta                | призракный (требуется ручной перевод)                        |     |     |
+| drima                | артефактный (требуется ручной перевод)                       |     |     |
 
 ### Эмоции
 | Слово | Перевод               | Значение                     | Примечания      |
