--- a/Информация и особенности/Зэкерисский язык/Разметка.md
+++ b/Информация и особенности/Зэкерисский язык/Разметка.md
@@ -46,3 +46,4 @@
 | lewepih                             | \ [как? сколько? в] *момент*                                                                                                                                                                      | вмоментально                                                              |
 | setsonob                            | \ (продолжительно) [от] *нутро*                                                                                                                                                                   | изнутри доносится                                                         |
 
+| modexwate drakok | \ (в будущем совершено) *ремонтить (требуется ручной перевод)* \ [кого? что?] *здание*  | отремонтировать здания (постановление) |
