--- a/Информация и особенности/Зэкерисский язык/Словарь.md
+++ b/Информация и особенности/Зэкерисский язык/Словарь.md
@@ -398,6 +398,8 @@ action obsidian://shell-commands/?vault=Zekeris&execute=65gagfb4h2
 | xwat                 | ремонт                                                       |     |     |
 | gedv                 | что-то завершённое                                           |     |     |
 | pasv                 | буква                                                        |     |     |
+| rtit                 | освещение                                                    |     |     |
+| psit                 | деревня                                                      |     |     |
 
 
 
@@ -804,6 +806,8 @@ action obsidian://shell-commands/?vault=Zekeris&execute=65gagfb4h2
 | xwate                | ремонтить (требуется ручной перевод)                         |     |     |
 | gedve                | что-то завершённоеить (требуется ручной перевод)             |     |     |
 | pasve                | букваить (требуется ручной перевод)                          |     |     |
+| rtite                | освещениеить (требуется ручной перевод)                      |     |     |
+| psite                | деревняить (требуется ручной перевод)                        |     |     |
 
 
 
@@ -1208,6 +1212,8 @@ action obsidian://shell-commands/?vault=Zekeris&execute=65gagfb4h2
 | xwata                | ремонтный (требуется ручной перевод)                         |     |     |
 | gedva                | что-то завершённоеный (требуется ручной перевод)             |     |     |
 | pasva                | букваный (требуется ручной перевод)                          |     |     |
+| rtita                | освещениеный (требуется ручной перевод)                      |     |     |
+| psita                | деревняный (требуется ручной перевод)                        |     |     |
 
 ### Эмоции
 | Слово | Перевод               | Значение                     | Примечания      |
