--- a/Информация и особенности/Зэкерисский язык/Словарь.md
+++ b/Информация и особенности/Зэкерисский язык/Словарь.md
@@ -412,6 +412,20 @@ action obsidian://shell-commands/?vault=Zekeris&execute=65gagfb4h2
 | kaDZ      | сундук                                                       |                                                                                                       |                                                                                                                                                                                                             |
 | Los                  | день                                                         |     |     |
 | gjerN                | мужской пол. орг.                                            |     |     |
+| jErtom               | месяц жертом                                                 |     |     |
+| wsAmed               | месяц шсамэд                                                 |     |     |
+| pIwtov               | месяц пыштов                                                 |     |     |
+| sUler                | месяц сулэр                                                  |     |     |
+| mIhwten              | месяц михштен                                                |     |     |
+| kAtnel               | месяц катнэл                                                 |     |     |
+| nAreg                | месяц нарэг                                                  |     |     |
+| dAtmil               | месяц датмыл                                                 |     |     |
+| TOrat                | месяц тёрат                                                  |     |     |
+| xItat                | месяц хытат                                                  |     |     |
+| Asfemd               | асфэмд (высокосный день)                                     |     |     |
+| Pit                  | месяц (календарный)                                          |     |     |
+| latg                 | замысел                                                      |     |     |
+| favx                 | вложенный смысл                                              |     |     |
 
 
 
@@ -832,6 +846,9 @@ action obsidian://shell-commands/?vault=Zekeris&execute=65gagfb4h2
 | kaDZe      | сундукить (требуется ручной перевод)                         |                                                                                 |                                                                                                  |
 | Lose                 | деннить (наступление дня)                                    |     |     |
 | gjerNe               | использовать gjern в репродуктивном назначении               |     |     |
+| Pite                 | отмерять месяц, протекать месяц                              |     |     |
+| latge                | вкладывать замысел                                           |     |     |
+| favxe                | вкладывать свой смысл                                        |     |     |
 
 
 
@@ -1250,6 +1267,9 @@ action obsidian://shell-commands/?vault=Zekeris&execute=65gagfb4h2
 | kaDZa      | сундукный (требуется ручной перевод)                         |                                                           |            |
 | Losa                 | дневной                                                      |     |     |
 | gjerNa               | такой, который имеет отношение к gjern                       |     |     |
+| Pita                 | месячный                                                     |     |     |
+| latga                | такой, в который вложен замысел                              |     |     |
+| favxa                | такой, в который вложен свой смысл                           |     |     |
 
 ### Эмоции
 | Слово | Перевод               | Значение                     | Примечания      |
