--- a/Информация и особенности/Календарь.md
+++ b/Информация и особенности/Календарь.md
@@ -1,16 +1,16 @@
 В зэкерисском году примерно 360,2 суток, поэтому календарь делится на 10 месяцев по 36 дней. Каждый пятый год в календарь также добавляется высокосный день.
 
 Названия всех месяцев:
-1. Jertom — с первого Жертома начинается новый год.
-2. Wsamed
-3. Piwtov
-4. Suler — последний месяц зимы.
-5. Mihwten — первый месяц лета. Фактически можно сравнить с нашим апрелем.
-6. Katnel
-7. Nareg
-8. Datmil
-9. Torat — последний месяц лета. Сравним с нашим сентябрём.
-10. Xitat — первый месяц зимы.
+1. jErtom — с первого Жертома начинается новый год.
+2. wsAmed
+3. pIwtov
+4. sUler — последний месяц зимы.
+5. mIhwten — первый месяц лета. Фактически можно сравнить с нашим апрелем.
+6. kAtnel
+7. nAreg
+8. dAtmil
+9. TOrat — последний месяц лета. Сравним с нашим сентябрём.
+10. xItat — первый месяц зимы.
 
 Высокосный день называется Asfemd и вводится между Катнэлом и Нарэгом.
 
