--- a/Персонажи/Алмаз (Зао) Элитра.md
+++ b/Персонажи/Алмаз (Зао) Элитра.md
@@ -22,7 +22,7 @@ tags:
 | Идеология           | [[Куриосизм]], [[Декристаллизм]] (После возвращения из мультивсленной) |
 
 ### Сила
-Левая половина тела отличается цветом: синяя кожа, белые волосы, бледно-голубой глаз с чёрным белком, но и с чёрным зрачком. Эта половина тела твёрже алмаза и способна поглотить любое количество кинетической энергии.
+Левая половина тела отличается цветом: синяя кожа, белые волосы, бледно-голубой глаз с чёрным белком, но и с чёрным зрачком. По его желанию, эта половина тела может стать твёрже алмаза и поглощать любое количество кинетической энергии.
 
 >[!INFO]- Как это работает?
 >Все молекулы левой половины тела окружены частицами Экс-Пи, которые и защищают Алмаза. Они полностью поглощают и уничтожают кинетическую энергию, поэтому она не может достигнуть кристалоса.
