--- a/Информация и особенности/Идеологии/Бизлац.md
+++ b/Информация и особенности/Идеологии/Бизлац.md
@@ -1,6 +1,5 @@
 ---
-tags:
-  - доделать
+tags: []
 ---
 Главная идеология [[Теилт|Теилта]].
 
@@ -9,7 +8,7 @@ tags:
 
 Бизлацосы считают, что любая история, факт, случай, рассказ, теория — любой текст или событие должно быть сохранено в каком-либо виде. В основном, это письменный вид. В Теилте есть две основные структуры, связанные с сохранением информации: Библиотека и Архив.
 
-Библиотека — это группа строений, предназначенных для хранения публичной информации. В разное время, библиотека имела разные подходы к способу хранения и систематизации, но суть всегда одна: хранить и беречь любые книги, дневники, заметки и отчёты. Любой имеет доступ к библиотке.
+Библиотека — это группа строений, предназначенных для хранения публичной информации. В разное время, библиотека имела разные подходы к способу хранения и систематизации, но суть всегда одна: хранить и беречь любые книги, дневники, заметки и отчёты. Любой имеет доступ к библиотеке.
 
 Архив — это закрытый аналог библиотеки. Это отдельное здание, доступ к которому имеет теилтский Смотритель, а также приближённые к нему люди. Смотритель также может продавать отдельную информацию из архива частным лицам.
 
